post: TIL Oct 19th

--- a/_posts/2019-10-19-TIL-Oct-19th-2019.md
+++ b/_posts/2019-10-19-TIL-Oct-19th-2019.md
@@ -1,5 +1,5 @@
 ---
-title: "TIL Oct 19th 2019 - "
+title: "TIL Oct 19th 2019 - 메세지 목록 뷰컨트롤러 구현하기"
 header:
   teaser: /assets/images/til-og.png
   overlay_image: /assets/images/til-og.png
@@ -15,313 +15,219 @@ tags:
 
 
 
-LBTATools의 LBTAList로 CollectionView에 Cell 추가하기
+채팅 뷰컨트롤러를 구현했다면 메세지 목록 뷰컨트롤러가 필요하다. 보통 이 뷰컨트롤러에서는 내가 채팅한 사용자와의 대화 중 최신 메세지만을 보여준다. 파이어베이스와 swift 기반으로 만든 앱에 해당 기능을 추가하려고 한다.
+
+- 채팅 뷰컨트롤러 = ChatViewController
+- 메세지목록뷰컨트롤러 = RecentMessageViewController
 
 
 
-1. 일반적인 Cell 생성 방법
-2. LBTAListCell class 생성
-3. Cell 요소 디자인
-   - UIStackView.Alignment
-   - padding, margin
-   - minimumLineSpacing
+1. RecentMessage Model 디자인 및 생성
+3. RecentMessage에 Listener 달기
+   - change.type == .added,  .modified
+3. 수정되는 값 처리
+   - recentMessagesDictionary = \[String: RecentMessage]()
+   - function resetItem
+   - 배열 정렬
 
 
 
-### 1. 일반적인 Cell 생성 방법
+### 1. RecentMessage Model 디자인 및 생성
 
-collectionView에서 Custom Cell을 사용하는 방법은 다음과 같다.
-
-> identifier 설정
-
-사용할 Custom Cell에 대해서 identifier를 설정한다.
-
-스토리보드에서는 직접 Attributes Inspector에서 Identifier를 설정해준다.
-
-programmatically(스토리보드를 사용하지 않으면) collectionView를 선언한 ViewController에서 String type property로 identifier로 register함수를 통해 등록한다.
-
-
-
-> register
-
-Document에는 다음과 같이 register함수를 설명했다.
-
-Register a **class** for use in creating new collection view cells. 
-
-즉 class를 등록하는 것이다. register 함수의 첫번째 인자로는 cellClass가 들어간다.
+ChatViewController에서 구현했던 것은 match된 사람과 메세지를 주고받는 것이었다. 이를 위해 사용된 model은 다음과 같다.
 
 ```swift
-    fileprivate let cellId = "cellId"
-
-    // viewDidLoad()
-    collectionView.register(T.self, forCellWithReuseIdentifier: cellId)
-```
-
-LBTAListController에서는 제네릭으로 선언되어있는 T type이 사용되었다.
-
-
-
-> dequeueReusableCell
-
-collecionView에서도 tableView와 마찬가지로 cell들을 dequeue해서 재사용하는 방식을 사용한다.
-
-```swift
-    fileprivate let cellId = "cellId"
-
-    override open func collectionView(_ collectionView: UICollectionView, cellForItemAt indexPath: IndexPath) -> UICollectionViewCell {
-        let cell = collectionView.dequeueReusableCell(withReuseIdentifier: cellId, for: indexPath) as! T
-        cell.item = items[indexPath.row]
-        cell.parentController = self
-        return cell
-    }
-```
-
-dequeuing 할 때에는 type casting은 필수이다! `as!`
-
-
-
-```swift
-cell.parentController = self
-```
-
-parentController is set to the ListHeaderController that is rendering this cell. This is useful for scenarios where a cell contains a UIButton and you want to use addTarget(…) to trigger an action in the controller.
-
-추후에 UIButton을 cell에 추가할 때 addTarget을 사용하여 UIButton의 action을 처리할 때 편리하게 사용하기 위한 것.
-
-또한 이 `parentController` 는 optional로 `LBTAListCell`에 선언되어있다.
-
-
-
-### 2. LBTAListCell class 생성
-
-[LBTA github](https://github.com/bhlvoong/LBTATools)
-
-일단 UIColor로 dummy cell을 만든다.
-
-```swift
-class RecentMessageCell: LBTAListCell<UIColor> {
-    override var item: UIColor! {
-        didSet {
-            backgroundColor = item
-        }
-    }
-}
-```
-
-didSet을호 생성된 item객체들을 모두 처리하여 cell로 만들어준다. collectionViewCell의 initializer 같은 역할을 한다.
-
-
-
-```swift
-    override func viewDidLoad() {
-        super.viewDidLoad()
-        
-        items = [.red, .blue, .green]
-    }
-```
-
-
-
-> sizeForItemAt
-
-sizeForItemAt 에서 size를 원하는 값으로 설정, `UICollectionViewDelegateFlowLayout` 프로토콜을 채택해야지 사용할 수 있다.
-
-```swift
-    func collectionView(_ collectionView: UICollectionView, layout collectionViewLayout: UICollectionViewLayout, sizeForItemAt indexPath: IndexPath) -> CGSize {
-        return .init(width: view.frame.width, height: 120)
-    }
-```
-
-
-
-{: .notice--note}
-collectionView.contentInset.top 과 collectionView.scrollIndicatorInsets.top은 동시에 주는 것이 자연스럽다.
-
-
-
-> **LBTAListCell** 세부 구현 내용
-
-```swift
-open class LBTAListCell<T>: UICollectionViewCell {
-    
-    /// item is fed in automatically from ListHeaderController
-    open var item: T!
-    
-    /// parentController is set to the ListHeaderController that is rendering this cell.  This is useful for scenarios where a cell contains a UIButton and you want to use addTarget(...) to trigger an action in the controller.
-    open weak var parentController: UIViewController?
-    
-    /// 90% of lists need a separator line
-    public let separatorView = UIView(backgroundColor: UIColor(white: 0.6, alpha: 0.5))
-    
-    /// This convenience method sets up the separate line with some left padding
-    open func addSeparatorView(leftPadding: CGFloat = 0) {
-        addSubview(separatorView)
-        separatorView.anchor(top: nil, leading: leadingAnchor, bottom: bottomAnchor, trailing: trailingAnchor, padding: .init(top: 0, left: leftPadding, bottom: 0, right: 0), size: .init(width: 0, height: 0.5))
-    }
-    /// This sets up the separator to be anchored to some leading anchor
-    open func addSeparatorView(leadingAnchor: NSLayoutXAxisAnchor) {
-        addSubview(separatorView)
-        separatorView.anchor(top: nil, leading: leadingAnchor, bottom: bottomAnchor, trailing: trailingAnchor, size: .init(width: 0, height: 0.5))
-    }
-    
-    override public init(frame: CGRect) {
-        super.init(frame: frame)
-        backgroundColor = .white
-        setupViews()
-    }
-    
-    /// In your custom ListCell classes, just override setupViews() to provide custom behavior.  We do this to avoid overriding init methods.
-    open func setupViews() {}
-    
-    required public init?(coder aDecoder: NSCoder) {
-        fatalError()
-    }
+struct Message {
+    let text, fromId, toId: String
+    let timestamp: Timestamp
+    let isFromCurrentLoggedUser: Bool
 }
 ```
 
 
 
-> LBTAHeaderListController에서 Header부분을 제외한 구현 부분
+> Model - RecentMessage
 
-LBTAListController는 `LBTAListHeaderController<T, U, UICollectionReusableView>` 를 상속한 class이다. Header부분에 `UICollectionReusableView` 을 넣어서 빈 header이다.
-
-```swift
-    open var items = [U]() {
-        didSet {
-            collectionView.reloadData()
-        }
-    }
-    
-    fileprivate let cellId = "cellId"
-    
-    override open func viewDidLoad() {
-        super.viewDidLoad()
-        collectionView.backgroundColor = .white
-        
-        collectionView.register(T.self, forCellWithReuseIdentifier: cellId)
-   
-    /// ListHeaderController automatically dequeues your T cell and sets the correct item object on it.
-    override open func collectionView(_ collectionView: UICollectionView, cellForItemAt indexPath: IndexPath) -> UICollectionViewCell {
-        let cell = collectionView.dequeueReusableCell(withReuseIdentifier: cellId, for: indexPath) as! T
-        cell.item = items[indexPath.row]
-        cell.parentController = self
-        return cell
-    }
-```
-
-didSet에는 items가 바뀌면 collectionView를 reload 해준다.
-
-
-
-### 3. Cell 요소 디자인
-
-cell도 view에 속하기 때문에 view처럼 디자인 하면 된다.
-
-
-
-> setupViews()
-
-cell에 사용할 view properties를 추가하게 되면 initializer가 필요하게 되는데, setupViews()를 사용하면 이를 손쉽게 피할 수 있다. 그리고 `viewDidLoad()` 와 같은 역할을 한다.
-
-> 구현 내용
+RecentMessageViewController에 띄울 최신 메세지 목록들은 기존 Message model에서 가져오려면 다시 Message database를 sorting하여 최신 메세지를 가져와야하는 번거로움이 있다. 이런 번거로움을 덜기위하여 새롭게 RecentMessage Model을 만든다.
 
 ```swift
-    override public init(frame: CGRect) {
-        super.init(frame: frame)
-        backgroundColor = .white
-        setupViews()
-    }
-    
-    /// In your custom ListCell classes, just override setupViews() to provide custom behavior.  We do this to avoid overriding init methods.
-    open func setupViews() {}
+struct RecentMessage {
+    let uid, text, username, profileImgUrl: String
+    let timestamp: Timestamp
+}
 ```
 
 
 
 {: .notice--note}
-Cell의 구성 요소 U는 처음에는 UIColor를 사용하면 기본적으로 잘 rendering 되는지 그리고 요소들의 기본 위치를 정하기에 매우 훌륭하다.
+view에 띄워질 필요한 property를 생각하여 디자인하는 것이 좋다.
 
 
 
-> UIStackView.Alignment Document
+> Firestore 저장 경로
 
-`case fill`
+RecentMessage를 저장할 경로를 만들어주자.
 
-A layout where the stack view resizes its arranged views so that they fill the available space perpendicular to the stack view’s axis.
-스택뷰의 axis와 수직 방향으로 채운다
+`recent_messages` 라는 collection을 새롭게 만들어주고 그 안에 `RecentMessage` 모델이 들어가도록 한다.
 
-`case leading`
-
-A layout for **vertical stacks** where the stack view aligns the leading edge of its arranged views along its leading edge. This is equivalent to the `top` alignment for horizontal stacks.
-vertical 스택뷰에서 왼쪽 정렬
-
-`static var top: UIStackView.Alignment`
-
-A layout for **horizontal stacks** where the stack view aligns the top edge of its arranged views along its top edge. This is equivalent to the `UIStackView.Alignment.leading` alignment for vertical stacks.
-horizontal 스택뷰 위 정렬
-
-`case firstBaseline`
-
-A layout where the stack view aligns its arranged views based on their first baseline. This alignment is only valid for **horizontal stacks**.
-
-`case center`
-
-A layout where the stack view aligns the center of its arranged views with its center along its axis.
-축에 맞게 center로 정렬
-
-`case trailing`
-
-A layout for vertical stacks where the stack view aligns the trailing edge of its arranged views along its trailing edge. This is equivalent to the `bottom` alignment for horizontal stacks.
-
-`static var bottom: UIStackView.Alignment`
-
-A layout for horizontal stacks where the stack view aligns the bottom edge of its arranged views along its bottom edge. This is equivalent to the `UIStackView.Alignment.trailing` alignment for vertical stacks.
-
-`case lastBaseline`
-
-A layout where the stack view aligns its arranged views based on their last baseline. This alignment is only valid for horizontal stacks.
+먼저 dummy data를 넣어주는 것도 좋다. 처음에는 저장되는 document 이름 역할을 하는 uid가 중요하지 않기 때문에 아무 값이나 넣어주고 filed에 dummy data만 잘 넣어주면 된다.
 
 
 
-> padding, margin
+### 2. RecentMessage에 Listener 달기
 
 ```swift
-.padLeft(16).padRight(16)
+guard let currentUserId = Auth.auth().currentUser?.uid else { return }
+
+Firestore.firestore().collection("matches_messages").document(currentUserId).collection("recent_messages").addSnapshotListener { (querySnapshot, err) in
+            // check err
+            
+querySnapshot?.documentChanges.forEach({ (change) in
+	  if change.type == .added {
+				let dictionary = change.document.data()
+				items.append(RecentMessage(dictionary: dictionary))
+		}
+		collectionView.reloadData()
+})
 ```
 
-stack에 바로 추가 가능
+이렇게 코드를 작성하면 firestore, recent_messages에 새롭게 데이터가 저장될 때에만 나오게 된다. 즉각적이 수정이 일어날 때 마다 반응하도록 변경해야한다.
 
 
 
-> 구현 내용
+> change.type == .modified
+
+`addSnapshotListener` 의 `querySnapshot.documentChanges` 의 요소 타입이 `.modified` 도 존재하기 때문에 조건에 추가해준다.
 
 ```swift
-extension UIStackView {
-    
-    @discardableResult
-    open func withMargins(_ margins: UIEdgeInsets) -> UIStackView {
-        layoutMargins = margins
-        isLayoutMarginsRelativeArrangement = true
-        return self
-    }
-    
-    @discardableResult
-    open func padLeft(_ left: CGFloat) -> UIStackView {
-        isLayoutMarginsRelativeArrangement = true
-        layoutMargins.left = left
-        return self
-    }
+querySnapshot?.documentChanges.forEach({ (change) in
+	  if change.type == .added || change.type == .modified {
+				let dictionary = change.document.data()
+				let recentMessage = RecentMessage(dictionary: dictionary)
+				self.recentMessagesDictionary[recentMessage.uid] = recentMessage
+		}
+})
+```
+
+하지만 이렇게 코드를 작성하면, 수정이 되면 또 추가되버려서 중복되는 현상이 발생한다.
+
+
+
+> Firebase - FIRQueryDocumentSnapshot
+
+```objective-c
+/** An enumeration of document change types. */
+typedef NS_ENUM(NSInteger, FIRDocumentChangeType) {
+  /** Indicates a new document was added to the set of documents matching the query. */
+  FIRDocumentChangeTypeAdded,
+  /** Indicates a document within the query was modified. */
+  FIRDocumentChangeTypeModified,
+  /**
+   * Indicates a document within the query was removed (either deleted or no longer matches
+   * the query.
+   */
+  FIRDocumentChangeTypeRemoved
+} NS_SWIFT_NAME(DocumentChangeType);
 ```
 
 
 
-> minimumLineSpacing
+### 3. 수정되는 값 처리
+
+중복을 없애기 위해서 Dictionary를 사용한다. 모든 사용자의 uid는 고유하기 때문에 uid를 키로 갖고 RecentMessage를 value로 갖는 Dictionary를 만든다.
+
+이렇게 Dictionary에 RecentMessage를 저장하면, 새롭게 추가되거나 수정되는 RecentMessage Model들을 모두 처리할 수 있다.
 
 ```swift
-    func collectionView(_ collectionView: UICollectionView, layout collectionViewLayout: UICollectionViewLayout, minimumLineSpacingForSectionAt section: Int) -> CGFloat {
-        return 0
+var recentMessagesDictionary = [String: RecentMessage]()
+
+...
+
+querySnapshot?.documentChanges.forEach({ (change) in
+	  if change.type == .added || change.type == .modified {
+				let dictionary = change.document.data()
+				let recentMessage = RecentMessage(dictionary: dictionary)
+				self.recentMessagesDictionary[recentMessage.uid] = recentMessage
+		}
+})
+```
+
+
+
+forEach문을 다 돌았다면, 업데이트된 Dictionary를 **정렬**을 한번 시켜준 후에 통해 화면에 반영시킨다.
+
+```swift
+    fileprivate func resetItems() {
+        let values = Array(recentMessagesDictionary.values)
+        items = values.sorted(by: { (rm1, rm2) -> Bool in
+            return rm1.timestamp.compare(rm2.timestamp) == .orderedDescending
+        })
+        collectionView.reloadData()
     }
 ```
 
- 
+
+
+> values
+
+recentMessagesDictionary.values에 사용된 values(Instance Property)
+
+
+
+> document
+
+```swift
+var values: Dictionary<Key, Value>.Values { get set }
+```
+
+
+
+#### values
+
+A collection containing just the values of the dictionary. 
+
+dictionary의 value들을 가지고 있는 collection이다. 이를 Array로 한번 type casting을 한 뒤에, 고차함수 `sorted`를 이용한다. 공식 문서에 의하면 보통 forEach나 for문을 사용하여 collection에 요소들에 접근하나보다.
+
+
+
+> sorted
+
+```swift
+items = values.sorted(by: { (rm1, rm2) -> Bool in
+            return rm1.timestamp.compare(rm2.timestamp) == .orderedDescending
+        })
+```
+
+
+
+> Document
+
+Returns the elements of the sequence, sorted using the given predicate as the comparison between elements.
+
+```swift
+func sorted(by areInIncreasingOrder: (RecentMessage, RecentMessage) throws -> Bool) rethrows -> [RecentMessage]
+```
+
+`$0`, `$1` 에 대해서 closure안이 true인 조건으로 elements를 sort한 후에 array를 return한다.
+
+
+
+> compare
+
+```objective-c
+- (NSComparisonResult)compare:(FIRTimestamp *)other {
+  if (self.seconds < other.seconds) {
+    return NSOrderedAscending;
+  } else if (self.seconds > other.seconds) {
+    return NSOrderedDescending;
+  }
+
+  if (self.nanoseconds < other.nanoseconds) {
+    return NSOrderedAscending;
+  } else if (self.nanoseconds > other.nanoseconds) {
+    return NSOrderedDescending;
+  }
+  return NSOrderedSame;
+}
+```
 
