--- a/_posts/2019-10-21-TIL-Oct-21st-2019.md
+++ b/_posts/2019-10-21-TIL-Oct-21st-2019.md
@@ -1,5 +1,5 @@
 ---
-title: "TIL Oct 21st 2019 - 쇼핑목록 테이블 뷰: Codable, JSONDecoder"
+title: "TIL Oct 21st 2019 - 쇼핑목록 테이블 뷰 #1: Codable, JSONDecoder"
 header:
   teaser: /assets/images/til-og.png
   overlay_image: /assets/images/til-og.png
@@ -17,16 +17,13 @@ tags:
 
 iOS앱에서 테이블뷰는 대부분 필수적으로 개발을하게 되는데, 특히나 쇼핑몰 서비스는 더욱 더 테이블 뷰가 필수적이다.
 
-아무튼 테이블 뷰를 요구사항대로 개발하면서 많은 것을 배울 수 있었다. 특히나 JSONDecoder와 KeyDecodingStrategy를 사용하여 json파일을 굉장히 편하게 decoding할 수 있는 점이 신선한 충격이었다. 그리고 attributedString은 다시봐도 신기한 것 같다. 마지막으로 다크모드까지 살짝 대응할 수 있어서 더욱 재밌는 과정이었던 것 같다.
+아무튼 테이블 뷰를 요구사항대로 개발하면서 많은 것을 배울 수 있었다. 특히나 JSONDecoder와 KeyDecodingStrategy를 사용하여 json파일을 굉장히 편하게 decoding할 수 있는 점이 신선한 충격이었다. 
 
 
 
 1. Codable - Encodable & Decodable
 2. JSONDecoder
 3. KeyDecodingStrategy
-4. AttributedString
-5. StackView
-6. DarkMode
 
 
 
@@ -280,5 +277,7 @@ print(a.b.c.value) // Prints "3"
 ### References
 
 - [Parsing JSON Just Became Super Easy in Swift 4 with Decodable](https://www.youtube.com/watch?v=YY3bTxgxWss&feature=youtu.be)
+
 - [KeyDecodingStrategy](https://zeddios.tistory.com/497)
-- http://minsone.github.io/programming/swift-decoable-keydecodingstrategy
+
+- [[Swift4.1] JSONDecoder의 KeyDecodingStrategy](http://minsone.github.io/programming/swift-decoable-keydecodingstrategy)
