Edit: remove layout in sitemap form

--- a/_posts/2019-10-21-TIL-Oct-21st-2019.md
+++ b/_posts/2019-10-21-TIL-Oct-21st-2019.md
@@ -13,19 +13,19 @@ tags:
 
 ---
 
+테이블 뷰 JSON 데이터로 가져오기
 
+<br>
 
 iOS앱에서 테이블뷰는 대부분 필수적으로 개발을하게 되는데, 특히나 쇼핑몰 서비스는 더욱 더 테이블 뷰가 필수적이다.
 
 아무튼 테이블 뷰를 요구사항대로 개발하면서 많은 것을 배울 수 있었다. 특히나 JSONDecoder와 KeyDecodingStrategy를 사용하여 json파일을 굉장히 편하게 decoding할 수 있는 점이 신선한 충격이었다. 
 
-
-
 1. Codable - Encodable & Decodable
 2. JSONDecoder
 3. KeyDecodingStrategy
 
-
+<br>
 
 ### 1. Codable - Encodable & Decodable
 
@@ -85,7 +85,7 @@ request가 성공적으로 마치면, `data` parameter는 리소스 데이터를
 
 반대로 실패하게 되면, `data` 가 nil이 되고 `error` 는 실패 정보값을 갖게 된다. 성공여부와 관계없이 `response` parameter는 정보를 담고있다.
 
-
+<br>
 
 ### 2. JSONDecoder
 
@@ -111,7 +111,7 @@ JSONDecoder 객체를 통해 decoding을 해주면 된다.
         }.resume()
 ```
 
-
+<br>
 
 > decode
 
@@ -144,7 +144,7 @@ struct StoreItem: Decodable {
 
 모든 JSON을 파싱했을 때 값이 있다면 optional `?` 을 붙이지 않아도 되지만, 하나라도 nil값일 때가 있다면 꼭 optional을 지정해줘야한다.
 
-
+<br>
 
 > Decoding JSON with Array
 
@@ -159,7 +159,7 @@ struct StoreItem: Decodable {
 
 type parameter를 배열로만 바꿔주면 된다.
 
-
+<br>
 
 ### 3. KeyDecodingStrategy
 
@@ -177,7 +177,7 @@ var keyDecodingStrategy: JSONDecoder.KeyDecodingStrategy
 - useDefaultKeys
 - custom
 
-
+<br>
 
 > convertFromSnakeCase
 
@@ -196,13 +196,13 @@ base_uri
 		Converts to: baseUri
 ```
 
-
+<br>
 
 > useDefaultKeys
 
 A key decoding strategy that doesn't change key names during decoding.
 
-
+<br>
 
 > custom
 
@@ -256,7 +256,7 @@ struct AnyKey: CodingKey {
 }
 ```
 
-
+<br>
 
 ```swift
 // Customize each key to remove any preceding, dot-syntax paths.
@@ -272,7 +272,7 @@ print(a.b.c.value) // Prints "3"
 
 왜 AnyKey를 만들어서 반환하는지 이해가 잘 안됐는데, string값인 CodingKey 값으로 넘겨주려고 하는 것 같다.
 
-
+<br>
 
 ### References
 
